# shellcheck-py

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  azure-pipelines.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  python-publish.yml
