[metadata]
name = shellcheck_py
version = 0.9.0.6
description = Python wrapper around invoking shellcheck (https://www.shellcheck.net/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryanrhee/shellcheck-py
author = Ryan Rhee
author_email = pypi@rhee.io
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "linux" and platform_machine == "armv6hf"
    marker = sys_platform == "linux" and platform_machine == "armv7l"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.9.0/shellcheck-v0.9.0.linux.armv6hf.tar.xz
    sha256 = 03deed9ded9dd66434ccf9649815bcde7d275d6c9f6dcf665b83391673512c75
    extract = tar
    extract_path = shellcheck-v0.9.0/shellcheck
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.9.0/shellcheck-v0.9.0.linux.aarch64.tar.xz
    sha256 = 179c579ef3481317d130adebede74a34dbbc2df961a70916dd4039ebf0735fae
    extract = tar
    extract_path = shellcheck-v0.9.0/shellcheck
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.9.0/shellcheck-v0.9.0.linux.x86_64.tar.xz
    sha256 = 700324c6dd0ebea0117591c6cc9d7350d9c7c5c287acbad7630fa17b1d4d9e2f
    extract = tar
    extract_path = shellcheck-v0.9.0/shellcheck
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.9.0/shellcheck-v0.9.0.darwin.x86_64.tar.xz
    sha256 = 7d3730694707605d6e60cec4efcb79a0632d61babc035aa16cda1b897536acf5
    extract = tar
    extract_path = shellcheck-v0.9.0/shellcheck
    [shellcheck.exe]
    group = shellcheck-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "win32" and platform_machine == "ARM64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.9.0/shellcheck-v0.9.0.zip
    sha256 = ae58191b1ea4ffd9e5b15da9134146e636440302ce3e2f46863e8d71c8be1bbb
    extract = zip
    extract_path = shellcheck.exe
