[metadata]
name = shellcheck_py
version = 0.10.0.1
description = Python wrapper around invoking shellcheck (https://www.shellcheck.net/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryanrhee/shellcheck-py
author = Ryan Rhee
author_email = pypi@rhee.io
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "linux" and platform_machine == "armv6hf"
    marker = sys_platform == "linux" and platform_machine == "armv7l"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.10.0/shellcheck-v0.10.0.linux.armv6hf.tar.xz
    sha256 = 1c89cb51e1412b580d7ba8aac240251ffb0b829788f83d2daa4a82da42d275e4
    extract = tar
    extract_path = shellcheck-v0.10.0/shellcheck
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.10.0/shellcheck-v0.10.0.linux.aarch64.tar.xz
    sha256 = 324a7e89de8fa2aed0d0c28f3dab59cf84c6d74264022c00c22af665ed1a09bb
    extract = tar
    extract_path = shellcheck-v0.10.0/shellcheck
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.10.0/shellcheck-v0.10.0.linux.x86_64.tar.xz
    sha256 = 6c881ab0698e4e6ea235245f22832860544f17ba386442fe7e9d629f8cbedf87
    extract = tar
    extract_path = shellcheck-v0.10.0/shellcheck
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.10.0/shellcheck-v0.10.0.darwin.aarch64.tar.xz
    sha256 = bbd2f14826328eee7679da7221f2bc3afb011f6a928b848c80c321f6046ddf81
    extract = tar
    extract_path = shellcheck-v0.10.0/shellcheck
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.10.0/shellcheck-v0.10.0.darwin.x86_64.tar.xz
    sha256 = ef27684f23279d112d8ad84e0823642e43f838993bbb8c0963db9b58a90464c2
    extract = tar
    extract_path = shellcheck-v0.10.0/shellcheck
    [shellcheck.exe]
    group = shellcheck-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "win32" and platform_machine == "ARM64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.10.0/shellcheck-v0.10.0.zip
    sha256 = eb6cd53a54ea97a56540e9d296ce7e2fa68715aa507ff23574646c1e12b2e143
    extract = zip
    extract_path = shellcheck.exe
