[metadata]
name = shellcheck_py
version = 0.11.0.1
description = Python wrapper around invoking shellcheck (https://www.shellcheck.net/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryanrhee/shellcheck-py
author = Ryan Rhee
author_email = pypi@rhee.io
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.10
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "linux" and platform_machine == "armv6hf"
    marker = sys_platform == "linux" and platform_machine == "armv7l"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.11.0/shellcheck-v0.11.0.linux.armv6hf.tar.xz
    sha256 = 8afc50b302d5feeac9381ea114d563f0150d061520042b254d6eb715797c8223
    extract = tar
    extract_path = shellcheck-v0.11.0/shellcheck
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.11.0/shellcheck-v0.11.0.linux.aarch64.tar.xz
    sha256 = 12b331c1d2db6b9eb13cfca64306b1b157a86eb69db83023e261eaa7e7c14588
    extract = tar
    extract_path = shellcheck-v0.11.0/shellcheck
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "linux" and platform_machine == "riscv64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.11.0/shellcheck-v0.11.0.linux.riscv64.tar.xz
    sha256 = 693c987777e7b524dd311d9b8c704885a39c889c9804bb1ef1fd29b48567b0b3
    extract = tar
    extract_path = shellcheck-v0.11.0/shellcheck
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.11.0/shellcheck-v0.11.0.linux.x86_64.tar.xz
    sha256 = 8c3be12b05d5c177a04c29e3c78ce89ac86f1595681cab149b65b97c4e227198
    extract = tar
    extract_path = shellcheck-v0.11.0/shellcheck
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.11.0/shellcheck-v0.11.0.darwin.aarch64.tar.xz
    sha256 = 56affdd8de5527894dca6dc3d7e0a99a873b0f004d7aabc30ae407d3f48b0a79
    extract = tar
    extract_path = shellcheck-v0.11.0/shellcheck
    [shellcheck]
    group = shellcheck-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.11.0/shellcheck-v0.11.0.darwin.x86_64.tar.xz
    sha256 = 3c89db4edcab7cf1c27bff178882e0f6f27f7afdf54e859fa041fca10febe4c6
    extract = tar
    extract_path = shellcheck-v0.11.0/shellcheck
    [shellcheck.exe]
    group = shellcheck-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "win32" and platform_machine == "ARM64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/koalaman/shellcheck/releases/download/v0.11.0/shellcheck-v0.11.0.zip
    sha256 = 8a4e35ab0b331c85d73567b12f2a444df187f483e5079ceffa6bda1faa2e740e
    extract = zip
    extract_path = shellcheck.exe
